<resources>
    <string name="app_name">Calculator</string>

    <string name="parentheses">( )</string>
    <string name="pi">\u03C0</string>
    <string name="ac">AC</string>
    <string name="divide">\u00F7</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">\u00D7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="clear">\u232B</string>
    <string name="equals">=</string>
    <string name="fibonacci">ɸ</string>
</resources>