<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="bottom">

        <com.example.calculator.java.AutoResizeEditText
            android:id="@+id/display"
            style="@style/EditTextCalculatorStyle" />

        <TextView
            android:id="@+id/pre_result"
            style="@style/TextViewCalculatorStyle" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:rowCount="5"
            android:columnCount="4">

            <Button
                android:id="@+id/buttonParentheses"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/parentheses" />

            <Button
                android:id="@+id/buttonPi"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/pi" />

            <Button
                android:id="@+id/Fibonacci"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/fibonacci" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="0"
                android:layout_column="3"
                android:text="@string/divide" />

            <Button
                android:id="@+id/button7"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/seven" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button9"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/nine" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="1"
                android:layout_column="3"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/button4"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/four" />

            <Button
                android:id="@+id/button5"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="2"
                android:layout_column="2"
                android:text="@string/six" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="2"
                android:layout_column="3"
                android:text="@string/subtract" />

            <Button
                android:id="@+id/button1"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/one" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="3"
                android:layout_column="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="3"
                android:layout_column="2"
                android:text="@string/three" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="3"
                android:layout_column="3"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="4"
                android:layout_column="0"
                android:text="@string/dot" />

            <Button
                android:id="@+id/button0"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="4"
                android:layout_column="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/ButtonCalculatorStyle.Accent"
                android:layout_row="4"
                android:layout_column="2"
                android:text="@string/clear" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/ButtonCalculatorStyle"
                android:layout_row="4"
                android:layout_column="3"
                android:text="@string/equals" />

        </GridLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonAC"
        style="@style/ButtonCalculatorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        android:visibility="gone" />

    </FrameLayout>
</FrameLayout>